# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

January 26, 2002
	special cases for 90 degree transform.rotate()
	OSX cleanups for commandline (thanks Bob)

January 23, 2002
	transform.rotate() does alpha if image has alphaplane
	transform.rotate() no longer "off by one" in the x axis
	added CD.get_all() to get information for all tracks
	CD.play() can now take an option start and end time

January 17, 2002
        smarter importing code
        default pygame icon for window

January 16, 2002
	started implementing basic unit tests
	several bug cleanups with Rects (thx unit tests)

January 14, 2002
	display.update() boundaries fixed

January 11, 2002
	Surface.set_clip() can take None to clear the clipping

January 7, 2002
	fixed sprite.Group.has

January 6, 2002
	Merge with bob's inital MacOSX changes

January 5, 2002
        new and upgraded importing [BREAK?]
        fixed numberhandling in set_alpha and set_colorkey

January 2, 2002
	Group add/remove methods work

December 31, 2001
        pygame parachute does tracebacks with python2.2

December 20, 2001
	Surface.set_alpha() and set_colorkey() accept None
	event.set_allowed() and set_blocked() accept None

pygame-13
December 17, 2001
	small preps for the full 1.3 release

December 15, 2001
	small changes to sprite before release

December 2, 2001
	small protection for display Surfaces after display.quit()

December 1, 2001
	made time.delay() more accurate [BREAK]
	created time.wait() to work like old delay()
	added time.Clock objects for framerate tracking

November 26, 2001
        Surface.convert() doesn't segfault before pygame.init()

November 20, 2001
	added pygame.sprite.Group.update()
	Surface.blit() protection for alpha->8bit relaxed

November 19, 2001
        fixed image.fromstring() for "RGBA" mode

November 18, 2001